added affiliate clause to all pages

--- a/templates/pages/blog-template.html
+++ b/templates/pages/blog-template.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    
+    <!-- Add relevant meta tags for CEO -->
+        <meta name="description"
         content="Read about my experiences, challenges, and successes as I navigate the world of coding and content creation.">
     <meta name="keywords"
         content="coding blog, coding experiences, content creation, social media management, video editing, career change blog">
-    <meta name="author" content="LJ Talks">
+    
+        <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -97,8 +100,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
-                purchases.</p>
+            <p>As an Amazon Associate I earn from qualifying purchases</p>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
