--- a/templates/pages/blog-template.html
+++ b/templates/pages/blog-template.html
@@ -73,7 +73,6 @@
             <p> Method 1: HDMI Cable </p>
             <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
                     class="amazon">Amazon Link (other brands are available!)</a>.</p>
-            </p>
 
             <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
                 Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
@@ -114,15 +113,14 @@
                 Using your TV as a second screen can be very beneficial for coding, as it allows you to have more screen
                 real estate for your development environment and to easily view output or documentation.</p>
 
-            </p>
         </section>
     </main>
     <footer>
         <div class="container">
-            <section class="footer-top">
+            <div class="footer-top">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
-            </section>
-            <section class="footer-bottom">
+            </div>
+            <div class="footer-bottom">
                 <div class="footer-left">
                     <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
                         qualifying purchases.</p>
@@ -138,7 +136,7 @@
                         </ul>
                     </nav>
                 </div>
-            </section>
+            </div>
         </div>
     </footer>
 </body>
