--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,8 @@
-/* Basic reset and typography */
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
 .inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
 }
 
 body,
@@ -20,30 +16,24 @@ p {
 body {
     font-family: "Inter", sans-serif;
     background-color: #faeaff;
-    /* Accent Color 1 */
     color: #000000;
-    /* Black */
 }
 
 header {
     background-color: #5927e5;
-    /* Dominant Color */
     padding: 10px 0;
     border-bottom: 2px solid #000000;
-    /* Black */
 }
 
 header h1 {
     font-size: 1.5em;
     text-align: center;
     color: #ffffff;
-    /* Pure White */
 }
 
 header a {
     text-decoration: none;
     color: #ffffff;
-    /* Pure White */
 }
 
 nav ul {
@@ -61,14 +51,12 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #ffffff;
-    /* Pure White */
     font-weight: bold;
 }
 
 nav ul li a:hover {
     font-weight: bold;
     color: #faeaff;
-    /* Accent Color 1 */
 }
 
 /* Style for the active page menu item */
@@ -76,7 +64,6 @@ nav ul li a.active {
     text-decoration: underline;
     font-weight: bold;
     color: #faeaff;
-    /* Accent Color 1 */
 }
 
 /* Dropdown Menu */
@@ -88,7 +75,6 @@ nav ul li a.active {
     display: none;
     position: absolute;
     background-color: #5927e5;
-    /* Dominant Color */
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -96,7 +82,6 @@ nav ul li a.active {
 
 .dropdown-content a {
     color: #ffffff;
-    /* Pure White */
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -104,9 +89,7 @@ nav ul li a.active {
 
 .dropdown-content a:hover {
     background-color: #faeaff;
-    /* Accent Color 1 */
     color: #000000;
-    /* Black */
 }
 
 .dropdown:hover .dropdown-content {
@@ -116,9 +99,7 @@ nav ul li a.active {
 /* Style for the signup button */
 .btn-signup {
     background-color: #5927e5;
-    /* Dominant Color */
     color: #ffffff;
-    /* Pure White */
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -127,7 +108,6 @@ nav ul li a.active {
 
 .btn-signup:hover {
     background-color: #3b1ca1;
-    /* Darker shade of Dominant Color for hover */
 }
 
 
@@ -150,16 +130,12 @@ section {
 
 h2 {
     color: #5927e5;
-    /* Dominant Color */
 }
 
 /* Blog specific styles 
-main. blog .container {
-    max-width: 800px; /* Example width for blog pages */
-/* Add any other blog-specific styles here */
-}
-
-*/ .blog-post {
+ 
+  */
+.blog-post {
     margin-bottom: 40px;
 }
 
@@ -187,13 +163,21 @@ main. blog .container {
     border-radius: 8px;
 }
 
+.blog-content ol,
+.blog-content ul,
+.blog-content.reverse ol,
+.blog-content.reverse ul {
+    padding-left: 1em;
+    margin-left: 0em;
+    line-height: 1.4;
+}
+
 /* Contact Form Styles */
 .contact-form {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
     background-color: #ffffff;
-    /* Pure White */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -203,7 +187,6 @@ main. blog .container {
     margin-bottom: 10px;
     font-weight: bold;
     color: #000000;
-    /* Black */
 }
 
 .contact-form input,
@@ -219,9 +202,7 @@ main. blog .container {
 .contact-form button {
     padding: 10px 20px;
     background-color: #5927e5;
-    /* Dominant Color */
     color: #ffffff;
-    /* Pure White */
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -230,7 +211,6 @@ main. blog .container {
 
 .contact-form button:hover {
     background-color: #3b1ca1;
-    /* Darker shade of Dominant Color for hover */
 }
 
 .container {
@@ -245,10 +225,8 @@ main. blog .container {
 /* Footer Styles */
 footer {
     background-color: #5927e5;
-    /* Dominant Color */
     padding: 20px 0;
     box-shadow: #000000;
-    /* Black */
     color: #faeaff;
 }
 
@@ -259,9 +237,7 @@ footer .amazon {
 .footer-container {
     display: grid;
     grid-template-columns: 1fr;
-    /* Single column for the top section */
     grid-template-rows: auto auto;
-    /* Two rows for the top and bottom sections */
     gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
@@ -275,22 +251,18 @@ footer .amazon {
 .footer-bottom {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    /* Three columns for layout */
     gap: 20px;
     align-items: center;
-    /* Vertically center align items */
 }
 
 .footer-left,
 .footer-center,
 .footer-right {
     text-align: center;
-    /* Center all footer text by default */
 }
 
 .footer-right {
     text-align: right;
-    /* Align right for right section */
 }
 
 .footer-right ul {
@@ -307,21 +279,17 @@ footer .amazon {
 .footer-right a {
     text-decoration: none;
     color: #ffffff;
-    /* Pure White */
 }
 
 .footer-right a:hover {
     color: #faeaff;
-    /* Accent Color 1 */
 }
 
 /* Responsive design for mobile */
 @media (max-width: 768px) {
     .footer-container {
         grid-template-columns: 1fr;
-        /* Single column for all footer items */
         grid-template-rows: auto auto auto auto auto;
-        /* Adjust rows for each section */
     }
 
     .footer-top {
@@ -333,12 +301,9 @@ footer .amazon {
         grid-row: 2;
         display: grid;
         grid-template-columns: 1fr;
-        /* Single column for mobile view */
         grid-template-rows: auto auto auto auto;
-        /* Four rows for each section */
         gap: 10px;
         text-align: center;
-        /* Center all items in the footer-bottom section */
     }
 
     .footer-left {
@@ -357,13 +322,10 @@ footer .amazon {
         text-align: center;
     }
 
-    /* Ensure the footer text and elements stack vertically */
     .footer {
         display: grid;
         grid-template-rows: auto auto auto auto;
-        /* Adjust rows to stack all footer elements */
         gap: 16px;
-        /* Space between footer elements */
     }
 
     .footer-right ul {
@@ -375,10 +337,41 @@ footer .amazon {
     .footer-right li {
         margin-bottom: 10px;
     }
+
+    .blog-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .blog-content.reverse {
+        flex-direction: column;
+    }
+
+    p.center {
+        text-align: center;
+    }
+
+    /* Target ordered and unordered lists within blog-content and blog-content.reverse */
+    .blog-content ol,
+    .blog-content ul,
+    .blog-content.reverse ol,
+    .blog-content.reverse ul {
+        padding-left: 1em;
+        margin-left: 0em;
+        font-size: 0.9em;
+        line-height: 1.4;
+    }
+
+    /* Customize ordered list numbers */
+    .blog-content ol,
+    .blog-content.reverse ol {
+        list-style-type: decimal;
+    }
 }
 
-
+/* Media Query for small mobiles*/
 @media (max-width: 480px) {
+    
     header h1 {
         font-size: 1.2em;
     }
@@ -390,15 +383,13 @@ footer .amazon {
     .footer-top a {
         padding: 10px 20px;
         display: inline-block;
-        /* Ensures button fits well */
     }
 
     .footer li {
-        margin: 16px, 0;
+        margin: 16px 0;
     }
 
     .footer li+li {
         margin-top: 0;
-        /* Remove top margin from the second paragraph */
     }
 }
