started to add image to index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,14 @@ p {
     box-sizing: border-box;
 }
 
+container h2 a {
+    text-decoration: none;
+    color: inherit;
+}
+
 body {
     font-family: "Inter", sans-serif;
-    background-color: #faeaff;
+    background-color: rgb(247, 237, 248);
     color: #000000;
 }
 
@@ -140,6 +145,23 @@ section {
 
 h2 {
     color: #5927e5;
+}
+
+/* Home Page */
+#circle-cover-bg {
+    background: url("../images/mtb-laura.png") no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#myphoto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Blog specific styles 
