Trying to fix styles

--- a/backup-files/assets copy/css/stylebu20240806.css
+++ b/backup-files/assets copy/css/stylebu20240806.css
@@ -161,9 +161,7 @@ h2 {
     justify-content: center;
 }
 
-/* Blog specific styles 
- 
-  */
+/* Blog specific styles */
 .blog-post {
     margin-bottom: 40px;
 }
