--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ main {
     padding: 20px;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
 }
@@ -401,7 +402,7 @@ footer .amazon {
 
 /* Media Query for small mobiles*/
 @media (max-width: 480px) {
-    
+
     header h1 {
         font-size: 1.2em;
     }
