--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@ main {
     padding: 20px;
 }
 
-html,
-body {
+html, body {
     height: 100%;
     margin: 0;
 }
@@ -23,16 +22,7 @@ h1,
 h2,
 p {
     padding: 0;
-    margin: 0;
     box-sizing: border-box;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 container h2 a {
@@ -42,25 +32,14 @@ container h2 a {
 
 body {
     font-family: "Inter", sans-serif;
-    background-color: #faeaff);
+    background-color: rgb(247, 237, 248);
     color: #000000;
-}
-
-.logo h1 {
-    font-size: 1.5em;
-    color: #ffffff;
 }
 
 header {
     background-color: #5927e5;
-    border-bottom: 2px solid #5927e5;
-    position: fixed;
-    top: 0;
-    width : 100%;
-    z-index: 1000;
-
     padding: 10px 0;
-    background-color: #5927e5;
+    border-bottom: 2px solid #000000;
 }
 
 header h1 {
@@ -74,16 +53,11 @@ header a {
     color: #ffffff;
 }
 
-nav {
-    position: relative;
-}
-
 nav ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
     padding: 0;
-    margin: 0;
 }
 
 nav ul li {
@@ -93,16 +67,14 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
- /*   padding: 10px 20px;*/
+    padding: 10px 20px;
     color: #ffffff;
     font-weight: bold;
 }
 
 nav ul li a:hover {
     font-weight: bold;
-    background-color: #faeaff;
-    color: #5927e5;
-
+    color: #faeaff;
 }
 
 /* Style for the active page menu item */
@@ -110,14 +82,6 @@ nav ul li a.active {
     text-decoration: underline;
     font-weight: bold;
     color: #faeaff;
-}
-
-/* Hamburger Menu Icon*/
-.menu-icon {
-    display: none;
-    font-size: 30px;
-    color: #ffffff;
-    cursor: pointer;
 }
 
 /* Dropdown Menu */
@@ -167,10 +131,6 @@ nav ul li a.active {
 
 /* Main Content Styles*/
 
-main {
-    padding-top: 1263px;
-}
-
 main .container {
     width: 80%;
     margin: 0 auto;
@@ -201,9 +161,7 @@ h2 {
     justify-content: center;
 }
 
-/* Blog specific styles 
- 
-  */
+/* Blog specific styles */
 .blog-post {
     margin-bottom: 40px;
 }
@@ -282,15 +240,13 @@ h2 {
     background-color: #3b1ca1;
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
 
 .amazon:hover {
     font-weight: bold;
-}
-
-
-/* Adjust padding for main content to prevent overlap with fixed header */
-main {
-    padding-top: 70px; /* Adjust based on header height */
 }
 
 /* Footer Styles */
@@ -359,26 +315,6 @@ footer .amazon {
 
 /* Responsive design for mobile */
 @media (max-width: 768px) {
-
-    .container {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    nav ul {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-    }
-
-nav ul li {
-    margin: 10px 0;
-}
-
-.menu-icon {
-    display: block;
-}
-
     .footer-container {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto auto auto;
@@ -463,7 +399,7 @@ nav ul li {
 
 /* Media Query for small mobiles*/
 @media (max-width: 480px) {
-
+    
     header h1 {
         font-size: 1.2em;
     }
