--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ main {
     padding: 20px;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
 }
@@ -25,6 +26,13 @@ p {
     box-sizing: border-box;
 }
 
+/* don't thnk this is being used
+h1 {
+    font-size: 28.8px;
+   color: #ffffff;
+}
+*/
+
 container h2 a {
     text-decoration: none;
     color: inherit;
@@ -34,18 +42,34 @@ body {
     font-family: "Inter", sans-serif;
     background-color: rgb(255, 255, 255);
     color: #000000;
+    padding-top: 102px;
 }
 
 header {
-    background-color: #5927e5;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
+    color: #ffffff;
     padding: 10px 0;
-    box-shadow: rgba(89, 39, 229, .5);
-    border-bottom: 2px solid #000000;
+    box-shadow: #ff0077 (89, 39, 229, .5);
+
 }
 
+.logo-round {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    z-index: 2000;
+    display: block;
+}
+
+/*
 #logo-text h1 {
     font-size: 2em !important;
 }
+*/
 
 header .container {
     display: flex;
@@ -63,13 +87,16 @@ header a {
     color: #ffffff;
 }
 
-header .nav {
+#header-nav {
     justify-content: flex-end;
+    align-items: flex-end;
 }
 
+/* Don't think this is in use?
 .menu-icon {
     justify-content: flex-end;
 }
+    */
 
 nav ul {
     list-style-type: none;
@@ -92,14 +119,15 @@ nav ul li a {
 
 nav ul li a:hover {
     font-weight: bold;
-    color: #faeaff;
+    color: #ffd900;
+    transform: scale(1.05);
 }
 
 /* Style for the active page menu item */
 nav ul li a.active {
     text-decoration: underline;
     font-weight: bold;
-    color: #faeaff;
+    color: #ffd900;
 }
 
 /* Dropdown Menu */
@@ -110,10 +138,12 @@ nav ul li a.active {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #5927e5;
+    font-size: 2rem;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(255, 0, 119 0.2);
     z-index: 1;
+    align-items: end;
 }
 
 .dropdown-content a {
@@ -124,26 +154,34 @@ nav ul li a.active {
 }
 
 .dropdown-content a:hover {
-    background-color: #faeaff;
-    color: #000000;
+    background-color: #F9F9F9;
+    color: #ffd900;
+    transform: scale(1.05);
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+    transform: scale(1.05);
 }
 
 /* Style for the signup button */
 .btn-signup {
-    background-color: #5927e5;
+    background-color: #ff0077;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     color: #ffffff;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
+    border: 2px solid #ffffff;
+    box-shadow: 0 0 25px var(--main-color);
 }
 
 .btn-signup:hover {
-    background-color: #3b1ca1;
+    background-color: #ffd900;
+    transform: scale(1.05);
+    color: #F9F9F9;
+    box-shadow: 0 0 25px var(#ffd900), 0 0 50px var(#ff0077);
 }
 
 
@@ -160,7 +198,7 @@ main {
 }*/
 
 h2 {
-    color: #5927e5;
+    color: #ff0077;
 }
 
 /* Home Page */
@@ -184,6 +222,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50%;
 }
 
 .int-link {
@@ -217,6 +256,7 @@ h2 {
 .blog-content .image img {
     width: 95%;
     border-radius: 8px;
+    max height: 80px;
 }
 
 .blog-content ol,
@@ -226,6 +266,65 @@ h2 {
     padding-left: 1em;
     margin-left: 0em;
     line-height: 1.4;
+}
+
+.next-prev-blog {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+/*
+.next-blog {
+    width: 25%;
+    align-items: flex-start;
+    text-align: right;
+}
+
+.right-arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 200px;
+    background-color: #000000;
+    clip-path: polygon(0% 20%,60% 20% 60% 0%, 100% 50%, 50% 100%,60% 80%, 0% 80%);
+}
+
+.next-blog {
+    position: relative;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.right-arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    background-color: #000000;
+    clip-path: polygon(0% 35%, 70% 35%, 70% 0%, 100% 50%, 70% 100%, 70% 65%, 0% 65%);
+}
+*/
+
+container next-prev-blog .container .next-prev-blog {
+    width: 100dvw;
+    height: 2rem;
+    width: 2rem;
+    border-top: 8px solid #202020;
+    border-left: 8px solid #202020;
+    transform: rotate(45deg);
+    left: 27.5px;
+    top: 35px;
+}
+
+.prev-blog {
+    width: 25%;
+    align-items: flex-end;
+    text-align: left;
 }
 
 /* Contact Form Styles */
@@ -267,6 +366,7 @@ h2 {
 
 .contact-form button:hover {
     background-color: #3b1ca1;
+    transform: scale(1.05);
 }
 
 .container {
@@ -280,15 +380,16 @@ h2 {
 
 /* Footer Styles */
 footer {
-    background-color: #5927e5;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     padding: 20px 0;
     box-shadow: #000000;
-    color: #faeaff;
+    color: #F9F9F9
+    /* This doesn't have an effect because of other things*/
     text-align: center;
 }
 
 footer .amazon {
-    color: #faeaff;
+    color: #F9F9F9;
 }
 
 .footer-container {
@@ -310,6 +411,7 @@ footer .amazon {
     grid-template-columns: 1fr 2fr 1fr;
     gap: 20px;
     align-items: center;
+    color: #F9F9F9;
 }
 
 .footer-left,
@@ -340,6 +442,7 @@ footer .amazon {
 
 .footer-right a:hover {
     color: #faeaff;
+    transform: scale(1.05);
 }
 
 #socials {
@@ -354,6 +457,7 @@ footer .amazon {
     .footer-container {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto auto auto;
+        padding-top: 102px;
     }
 
     .footer-top {
@@ -436,7 +540,7 @@ footer .amazon {
 /*need to add something.*
 /* Media Query for small mobiles*/
 @media (max-width: 480px) {
-    
+
     nav ul li {
         margin: 5px 0;
     }
