--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,13 +237,30 @@ footer {
     text-align: center;
 }
 
-.footer-container {
+.footer {
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
-    max-width: 1200px;
+    max-width: 96%;
     margin: 0 auto;
 }
+
+.footer a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.footer a:hover {
+    font-weight: bold;
+}
+
+.footer-bottom {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    text-align: center;
+}
+
 
 .btn-signup {
     background-color: #ff0077;
@@ -262,18 +279,21 @@ footer {
     transform: scale(1.05);
     color: #F9F9F9;
     box-shadow: 0 0 25px var(#ffd900), 0 0 50px var(#ff0077);
+    font-size: 1.2rem;
 }
 
-.footer-top {
+.footer-signup {
     text-align: center;
+    order: 1;
 }
 
-.footer-bottom {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-    text-align: center;
+.footer-amazonlink {
+    order: 2;
 }
+
+.footer-copyright {
+    order: 4;
+} 
 
 .footer-right ul {
     list-style-type: none;
